# Weather-ETL-Pipeline

./: .flake8  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  db_loader.py  extractor.py  transformer.py
docker/: .dockerignore  Dockerfile  docker-compose.yaml
tests/: test_db_loader.py  test_extractor.py  test_transformer.py
